--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <title>Portfólio - Pedro</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-    
+
+    <!--
+        -Incluir LinkedIn
+        -Deixar apenas a logo do Discord e LinkedIn
+        -Move-los para baixo
+    -->
 </head>
 <body>
     <div class="sidebar">
