--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <div class="terminal-content" id="terminal-content">
             <div class="terminal-line" id="welcome-message">
-                <span class="prompt">pdro@DESKTOP:~$</span> whoami
+                <span class="prompt">pdro@DESKTOP:~$</span>
             </div>
             
             <div class="terminal-line" id="bio-pt" lang="pt-br">
